create side-bar and nav (2)

--- a/src/layouts/side-bar/side-bar.style.scss
+++ b/src/layouts/side-bar/side-bar.style.scss
@@ -1,5 +1,5 @@
 .side-bar {
-    background: #141414;
+    background: #158abc;
     height: 88vh;
     width: 14vw;
     left: 0;
@@ -9,17 +9,6 @@
     top: 0;
     z-index: 10;
 }
-
-.test { display: flex;}
-
-.header-container {
-    background: #141414;
-    height: 12vh;
-    justify-content: flex-start;
-    display: flex;
-    align-items: center;
-}
-
 .icon-home {
     margin-left: 10px;
     height: 40px;
