--- a/src/layouts/header/header.styles.scss
+++ b/src/layouts/header/header.styles.scss
@@ -1,8 +1,8 @@
 .header-container {
-    background: #141414;
+    background: #158abc;
     height: 12vh;
+    width: 100vw;
     justify-content: flex-start;
-    display: flex;
     align-items: center;
 }
 
