--- a/src/layouts/side-bar/menu/menu.styles.scss
+++ b/src/layouts/side-bar/menu/menu.styles.scss
@@ -10,7 +10,7 @@
     align-items: center;
     padding: 10px;
     list-style: none;
-    height: 20px;
+    height: 40px;
     text-decoration: none;
     font-size: 18px;
     &:hover {
@@ -18,6 +18,7 @@
       border-left: 4px solid #632ce4;
       cursor: pointer;
     }
+    transition: 300ms;
 }
 .sub-menu {
     background: #414757;
@@ -28,8 +29,18 @@
     text-decoration: none;
     color: #f5f5f5;
     font-size: 18px;
+    bor
     &:hover {
       background: #632ce4;
       cursor: pointer;
     }
+}
+
+.menu-icon{
+ // width: 50%;
+  text-align: right;
+}
+
+.active{
+  background-color: #e1e9fc;
 }
