feat: Add Management Page

--- a/src/layouts/header/header.styles.scss
+++ b/src/layouts/header/header.styles.scss
@@ -1,5 +1,5 @@
 .header-container {
-    background: #158abc;
+    background: #001529;
     height: 12vh;
     justify-content: flex-start;
     align-items: center;
