--- a/src/layouts/side-bar/side-bar.styles.scss
+++ b/src/layouts/side-bar/side-bar.styles.scss
@@ -1,18 +1,9 @@
 .logo {
     height: 12vh;
-    // margin: 16px;
-    background: rgba(255, 255, 255, 0.2);
+    text-align: center;
+    padding: 25px;
   }
 
-  .menu-theme{
-    background-color: rgb(20, 119, 206) !important;
-    color: black;
-  }
-
-  .menu-container{
-    background-color: rgb(223, 52, 194)
-  }
-
-  .ant-layout .ant-layout-sider-trigger {
-    background: aliceblue;
+  .ant-menu-title-content {
+    font-weight: bold;
   }
