--- a/src/components/loading/loading.styles.scss
+++ b/src/components/loading/loading.styles.scss
@@ -1,10 +1,14 @@
 .loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+.loading-container {
   width: 3.25em;
   transform-origin: center;
   animation: rotate4 2s linear infinite;
-  position: relative;
-  top: 45%;
-  left: 48%;
 }
 
 circle {
