--- a/src/pages/management/filter/filter.styles.scss
+++ b/src/pages/management/filter/filter.styles.scss
@@ -45,3 +45,26 @@
     border: 2px solid grey;
   }
 }
+
+.button-create {
+  border: 2px solid #24b4fb;
+  background-color: #24b4fb;
+  border-radius: 0.9em;
+  padding: 0.8em 1.2em 0.8em 1em;
+  transition: all ease-in-out 0.2s;
+  font-size: 16px;
+  width: 120px;
+  float: right;
+}
+
+.button-create span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
+}
+
+.button-create:hover {
+  background-color: #0071e2;
+}
