--- a/src/pages/management/create-product/create-product.styles.scss
+++ b/src/pages/management/create-product/create-product.styles.scss
@@ -1,10 +1,14 @@
-.source-price {
-    display: inline-block;
-    width: calc(50%);
-    margin-left: 8px;
+.remove-icon {
+    top: 8px;
+    position: relative;
+    left: 5px;
 }
 
-.price {
-    display: inline-block;
-    width: calc(50% - 8px);
+.side-quantity{
+    margin-left: -85px;
+}
+
+.steps{
+    width: 50%;
+    padding-bottom: 5px;
 }
