--- a/src/layouts/header/header.styles.scss
+++ b/src/layouts/header/header.styles.scss
@@ -1,11 +1,10 @@
 .header-container {
-    height: 12vh;
-    justify-content: flex-start;
-    align-items: center;
+	height: 10vh;
+	background-color: #001529;
 }
 
 .icon-home {
-    margin-left: 10px;
-    height: 40px;
-    width: 40px;
+	margin-left: 10px;
+	height: 40px;
+	width: 40px;
 }
