--- a/src/pages/management/styles.scss
+++ b/src/pages/management/styles.scss
@@ -65,7 +65,7 @@
 	padding: 0.8em 1.2em 0.8em 1em;
 	transition: all ease-in-out 0.2s;
 	font-size: 16px;
-	width: 120px;
+	width: 100px;
 	color: #ffff;
 	float: right;
 }
@@ -102,4 +102,8 @@
 	:focus {
 		border: 2px solid grey;
 	}
+}
+
+.ant-table-wrapper .ant-table-pagination.ant-pagination {
+	margin: 16px 0px 0px 0px;
 }
